# DeFi-powered

./: .env.example  .gitignore  AGENTS.md  SPEC.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260613_0001_campaigns.py  20260614_0002_events_scoring.py  20260614_0003_event_provenance.py  20260614_0004_audience_hypotheses.py  20260614_0005_campaign_lineage.py  20260614_0006_engagement_plans.py  20260614_0007_generated_content.py  20260614_0008_content_review.py  20260614_0009_content_handoff.py  (+31 more)
apps/api/: __init__.py  (+1 more)
docs/: ARCHITECTURE.md  BOUNDARIES.md  FOUNDATION_RUNTIME.md  RUNTIME_CONFIGURATION.md  TEST_MATRIX.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
scripts/: clean-campaigns.py  clean-campaigns.sh  clean-e2e.py  clean-e2e.sh  clean-us22.py  clean-us23.py  clean-us23.sh  clean-us24.py  clean-us24.sh  compare-browser-binaries.sh  compare_browser_binaries.py  e2e-with-api.sh  ensure-db-schema.sh  install-browser-runtime.sh  migrate-db.sh  playwright-install.sh  reseed-sources.py  reseed-sources.sh  run-worker.sh  seed-manual-test-data.py  smoke-api.sh  smoke-browser-worker.sh  smoke-scheduler.sh  smoke-worker.sh  verify-foundation.sh  verify-us-002.sh  verify-us-003.sh  verify-us-004.sh  verify-us-005.sh  verify-us-006.sh  verify-us-007.sh  verify-us-008.sh  verify-us-009.sh  verify-us-010.sh  verify-us-011.sh  verify-us-012.sh  verify-us-013.sh  verify-us-014.sh  verify-us-015.sh  verify-us-016.sh  (+33 more)
tests/: conftest.py
(+1003 files in other folders)
