[project]
name = "livelead"
version = "0.1.0"
description = "LiveLead Discovery & Engagement — foundation scaffold"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",
    "dramatiq[redis,watch]>=1.17.0",
    "redis>=5.2.0",
    "cryptography>=43.0.0",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
ai = [
    "google-genai>=1.0.0",
]
browser = [
    "playwright>=1.49.0",
    "selenium>=4.27.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "asgi-lifespan>=2.1.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/livelead"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["apps", "src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"apps/worker/tasks.py" = ["E402"]